// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codepen transform handles examples importing exampleData 1`] = `
"const { createListItems, IExampleItem } = window.FabricExampleData;

const FabricWrapper = window.Fabric.Fabric;
const FakeExampleDataExample = () => {
  return <div>hi</div>;
};

ReactDOM.render(
  <FabricWrapper>
    <FakeExampleDataExample />
  </FabricWrapper>,
  document.getElementById('content')
);
"
`;

exports[`codepen transform handles examples with class components 1`] = `
"const { SpinButton } = window.Fabric;

const FabricWrapper = window.Fabric.Fabric;
class SpinButtonBasicExample extends React.Component<any, any> {
  public render(): JSX.Element {
    return (
      <div style={{ width: '400px' }}>
        <SpinButton
          defaultValue=\\"0\\"
          label={'Basic SpinButton:'}
          min={0}
          max={100}
          step={1}
          iconProps={{ iconName: 'IncreaseIndentLegacy' }}
          incrementButtonAriaLabel={'Increase value by 1'}
          decrementButtonAriaLabel={'Decrease value by 1'}
        />
      </div>
    );
  }
}

ReactDOM.render(
  <FabricWrapper>
    <SpinButtonBasicExample />
  </FabricWrapper>,
  document.getElementById('content')
);
"
`;

exports[`codepen transform handles examples with function components 1`] = `
"const { Label } = window.Fabric;

const FabricWrapper = window.Fabric.Fabric;
const LabelBasicExample = () => {
  return (
    <div>
      <Label>I'm a Label</Label>
    </div>
  );
};

ReactDOM.render(
  <FabricWrapper>
    <LabelBasicExample />
  </FabricWrapper>,
  document.getElementById('content')
);
"
`;
